fix intro overflow

--- a/styles/sections/_intro.scss
+++ b/styles/sections/_intro.scss
@@ -5,6 +5,7 @@
 .intro {
     min-height: 100vh;
     position: relative;
+    overflow-x: hidden;
 
     .navbar {
         a {
